tests/ui/const-generics/mgca/projection-const-recursive.stderr
error[E0275]: overflow evaluating the requirement `<() as Trait>::A == _`
  --> $DIR/projection-const-recursive.rs:12:5
   |
LL |     type const A: () = <() as Trait>::A;
   |     ^^^^^^^^^^^^^^^^

error[E0275]: overflow evaluating the requirement `the constant `<() as Trait>::A` has type `()``
  --> $DIR/projection-const-recursive.rs:12:5
   |
LL |     type const A: () = <() as Trait>::A;
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
